--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "Fare         1.000000  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "Fare      0.257307 -0.549500  0.091566  0.159651  0.216225  1.000000"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "['le.joblib']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "['ct.joblib']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "['sc.joblib']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,19 +515,19 @@
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=.2, random_state=0)\n"
+    "    X, y, test_size=.2,random_state=5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8100558659217877\n"
+      "0.8379888268156425\n"
      ]
     },
     {
@@ -536,7 +536,7 @@
        "['classifier.joblib']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,14 +545,21 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# classifier = SVC(C=1)\n",
-    "classifier = SVC(kernel='rbf', random_state=0)\n",
+    "classifier = SVC(C=1)\n",
+    "# classifier = SVC(kernel='rbf', random_state=0)\n",
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "print(accuracy_score(y_test, y_pred))\n",
     "\n",
     "joblib.dump(classifier,'classifier.joblib')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
